@startuml Gyandeep_ER_Diagram_v2

' ============================================================
' Gyandeep ER Diagram - With Separate User Roles
' ============================================================

hide stereotypes
skinparam entity {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}
skinparam attribute {
    BackgroundColor #E8F4FD
    BorderColor #1E90FF
}

' ============================================================
' USER ROLE ENTITIES (Weak Entities from Users)
' ============================================================

entity "ADMIN" as admin {
    *user_id : UUID <<PK>> <<FK>>
    --
    *email : TEXT
    *name : TEXT
    password_hash : TEXT
    role : TEXT = 'admin'
    face_vector : VECTOR(128)
    email_verified : BOOLEAN
    xp : INT
    coins : INT
    preferences : JSONB
    created_at : TIMESTAMPTZ
}

entity "TEACHER" as teacher {
    *user_id : UUID <<PK>> <<FK>>
    --
    *email : TEXT
    *name : TEXT
    password_hash : TEXT
    role : TEXT = 'teacher'
    face_vector : VECTOR(128)
    email_verified : BOOLEAN
    xp : INT
    coins : INT
    preferences : JSONB
    created_at : TIMESTAMPTZ
}

entity "STUDENT" as student {
    *user_id : UUID <<PK>> <<FK>>
    --
    *email : TEXT
    *name : TEXT
    password_hash : TEXT
    role : TEXT = 'student'
    google_id : TEXT
    face_vector : VECTOR(128)
    email_verified : BOOLEAN
    xp : INT
    coins : INT
    preferences : JSONB
    created_at : TIMESTAMPTZ
}

' ============================================================
' ACADEMIC ENTITIES
' ============================================================

entity "SUBJECTS" as subjects {
    *id : UUID <<PK>>
    --
    *name : TEXT
    created_at : TIMESTAMPTZ
}

entity "CLASSES" as classes {
    *id : UUID <<PK>>
    --
    *name : TEXT
    teacher_id : UUID <<FK>>
    created_at : TIMESTAMPTZ
}

entity "CLASS_ENROLLMENTS" as enrollments {
    *class_id : UUID <<PK>> <<FK>>
    *student_id : UUID <<PK>> <<FK>>
    --
    enrolled_at : TIMESTAMPTZ
}

entity "CLASS_SESSIONS" as sessions {
    *id : UUID <<PK>>
    --
    *class_id : UUID <<FK>>
    subject_id : UUID <<FK>>
    *code : CHAR(6)
    *expiry : TIMESTAMPTZ
    location : GEOMETRY
    radius_m : INT
    notes_url : TEXT
    notes_hash : TEXT
    quiz_published : BOOLEAN
    created_at : TIMESTAMPTZ
}

entity "ATTENDANCE" as attendance {
    *id : BIGSERIAL <<PK>>
    --
    *session_id : UUID <<FK>>
    *student_id : UUID <<FK>>
    *status : attendance_status
    geo_location : GEOMETRY
    *verified_at : TIMESTAMPTZ
}

entity "QUIZZES" as quizzes {
    *id : UUID <<PK>>
    --
    *session_id : UUID <<FK>>
    *questions : JSONB
    created_at : TIMESTAMPTZ
}

entity "PERFORMANCE" as performance {
    *id : BIGSERIAL <<PK>>
    --
    *student_id : UUID <<FK>>
    subject_id : UUID <<FK>>
    session_id : UUID <<FK>>
    *score : DECIMAL
    max_score : DECIMAL
    *recorded_at : TIMESTAMPTZ
}

entity "GRADES" as grades {
    *id : UUID <<PK>>
    --
    *student_id : UUID <<FK>>
    teacher_id : UUID <<FK>>
    *subject : TEXT
    *category : TEXT
    *title : TEXT
    *score : DECIMAL
    *max_score : DECIMAL
    weight : DECIMAL
    *date : DATE
    created_at : TIMESTAMPTZ
}

entity "QUESTION_BANK" as question_bank {
    *id : UUID <<PK>>
    --
    *question : TEXT
    *options : JSONB
    *correct_answer : TEXT
    subject : TEXT
    tags : JSONB
    difficulty : TEXT
    notes_hash : TEXT
    created_at : TIMESTAMPTZ
}

entity "BADGES" as badges {
    *id : SERIAL <<PK>>
    --
    *name : TEXT
    *slug : TEXT
    metadata : JSONB
}

entity "USER_BADGES" as user_badges {
    *user_id : UUID <<PK>> <<FK>>
    *badge_id : INT <<PK>> <<FK>>
    --
    awarded_at : TIMESTAMPTZ
}

entity "AUDIT_LOGS" as audit_logs {
    *id : BIGSERIAL <<PK>>
    --
    *ts : TIMESTAMPTZ
    *type : TEXT
    user_id : UUID <<FK>>
    details : JSONB
}

entity "NOTIFICATIONS" as notifications {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    *title : TEXT
    *message : TEXT
    *type : TEXT
    *read : BOOLEAN
    created_at : TIMESTAMPTZ
}

entity "OTP_CODES" as otp_codes {
    *id : UUID <<PK>>
    --
    *key : TEXT
    *code : TEXT
    *purpose : TEXT
    *expires_at : TIMESTAMPTZ
    created_at : TIMESTAMPTZ
}

' ============================================================
' RELATIONSHIPS - ADMIN
' ============================================================

' Admin manages Users
admin ||--o{ audit_logs : "performs"
admin ||--o{ notifications : "sends"

' ============================================================
' RELATIONSHIPS - TEACHER
' ============================================================

' Teacher teaches Classes
teacher ||--o{ classes : "teaches"

' Teacher creates Class Sessions
classes ||--o{ sessions : "conducts"

' Teacher assigns Grades
teacher ||--o{ grades : "assigns"

' Teacher creates Quizzes
sessions ||--o{ quizzes : "generates"

' Teacher creates Question Bank
sessions ||--o{ question_bank : "creates_from_notes"

' Teacher performs Actions
teacher ||--o{ audit_logs : "performs"
teacher ||--o{ notifications : "receives"

' ============================================================
' RELATIONSHIPS - STUDENT
' ============================================================

' Student enrolls in Classes
student ||--o{ enrollments : "enrolled_in"
classes ||--o{ enrollments : "has"

' Student marks Attendance
sessions ||--o{ attendance : "records"
student ||--o{ attendance : "marked_by"

' Student achieves Performance
student ||--o{ performance : "achieves"
sessions ||--o{ performance : "from"
subjects ||--o{ performance : "in"

' Student receives Grades
student ||--o{ grades : "receives"

' Student earns Badges
student ||--o{ user_badges : "earns"
badges ||--o{ user_badges : "awarded"

' Student performs Actions
student ||--o{ audit_logs : "performs"
student ||--o{ notifications : "receives"

' ============================================================
' RELATIONSHIPS - SUBJECTS & CLASSES
' ============================================================

subjects ||--o{ sessions : "assigned_to"
subjects ||--o{ performance : "tracked_for"
subjects ||--o{ question_bank : "categorized_by"

' ============================================================
' RELATIONSHIPS - OTP & AUTH
' ============================================================

admin ||--o{ otp_codes : "uses"
teacher ||--o{ otp_codes : "uses"
student ||--o{ otp_codes : "uses"

@enduml
